# edtrace

./: .gitignore  index.html
backend/: lecture_01.py  pyproject.toml
frontend/public/: var
