[project]
name = "edtrace"
version = "0.1.13"
description = "Library for tracing through Python programs for educational presentation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "sympy",
    "numpy",
    "requests",
    "beautifulsoup4>=4.15.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
